# WordPycket

./: .gitattributes  .gitignore  README.md  pdf_parser_llm_cleanup_expected.csv  pyproject.toml  requirements-macos.txt  run.bat  run.command  run.ps1
scripts/: build_portable.py  check_env.py  compare_pdf_csv.py  release_portable.py  setup_env.py
src/llmserver/: __init__.py  contracts.py  engine.py  llama_runtime.py  model_store.py  pdf_cleaning.py  prompts.py  server.py
src/wordpycket/: __init__.py  main.py
src/wordpycket/application/: ai_batch.py  datasets.py  ports.py  services.py  study_session.py
src/wordpycket/domain/: entities.py  repositories.py
src/wordpycket/infrastructure/: csv_importer.py  csv_library.py  example_generator.py  meaning_translator.py  pdf_vocabulary_importer.py  repositories.py  settings_store.py
src/wordpycket/presentation/: llm_jobs.py  qt_app.py  qt_workers.py  style.py  tk_app.py
tests/: test_architecture.py  test_csv_importer.py  test_csv_library.py  test_datasets.py  test_example_generator_isolation.py  test_llm_jobs.py  test_main_entry.py  test_meaning_translator.py  test_pdf_vocabulary_importer.py  test_qt_batch_worker.py  test_repositories.py  test_study_session.py
