[project]
name = "wordpycket"
version = "0.1.0"
description = "A small desktop vocabulary app built with DDD onion architecture."
requires-python = ">=3.10"
dependencies = [
    "llama-cpp-python>=0.3.0",
    "PySide6>=6.7",
]

[project.scripts]
wordpycket = "wordpycket.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
