[project]
name = "wordpycket"
version = "0.1.0"
description = "A small desktop vocabulary app built with DDD onion architecture."
requires-python = ">=3.10,<3.13"
dependencies = [
    "argostranslate>=1.9",
    "ftfy>=6.2",
    "gensim>=4.3",
    "llama-cpp-python>=0.3.0",
    "nltk>=3.8",
    "pandas>=2.2",
    "PySide6>=6.7",
    "regex>=2024.0",
    "spacy>=3.7",
    "wordfreq>=3.1",
]

[project.scripts]
wordpycket = "wordpycket.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
